[Ajith] || CDP Basic Setup - 5